@@ -51,6 +51,7 @@ namespace CsPad {
     ExternalTriggerDrop,
     NumberOfRunModes,
   };
+std::ostream& operator<<(std::ostream& str, CsPad::RunModes enval);
 
   /** Enum specifying different data collection modes. */
   enum DataModes {
@@ -59,6 +60,7 @@ namespace CsPad {
     testData = 2,
     reserved = 3,
   };
+std::ostream& operator<<(std::ostream& str, CsPad::DataModes enval);
 
 /** @class CsPadDigitalPotsCfg
 
