@@ -51,6 +51,7 @@ namespace CsPad2x2 {
     ExternalTriggerDrop,
     NumberOfRunModes,
   };
+std::ostream& operator<<(std::ostream& str, CsPad2x2::RunModes enval);
 
   /** Enum specifying different data collection modes. */
   enum DataModes {
@@ -59,6 +60,7 @@ namespace CsPad2x2 {
     testData = 2,
     reserved = 3,
   };
+std::ostream& operator<<(std::ostream& str, CsPad2x2::DataModes enval);
 
 /** @class CsPad2x2DigitalPotsCfg
 
