@@ -20,5 +20,8 @@ ConfigV1::~ConfigV1() {}
 
 ConfigV2::~ConfigV2() {}
 
+
+ConfigV3::~ConfigV3() {}
+
 } // namespace ControlData
 } // namespace Psana
