@@ -32,6 +32,10 @@ EventCodeV6::desc_shape() const {
   shape.push_back(DescSize);
   return shape;
 }
+uint32_t
+OutputMap::map() const {
+     enum { Pulse_Offset=0, DBus_Offset=32, Prescaler_Offset=40 };    unsigned src_id = source_id();   switch(source()) {   case Pulse     : return src_id + Pulse_Offset;   case DBus      : return src_id + DBus_Offset;   case Prescaler : return src_id + Prescaler_Offset;   case Force_High: return 62;   case Force_Low : return 63;   }   return 0;
+}
 std::ostream& operator<<(std::ostream& str, EvrData::OutputMap::Source enval) {
   const char* val;
   switch (enval) {
@@ -68,6 +72,10 @@ std::ostream& operator<<(std::ostream& str, EvrData::OutputMap::Conn enval) {
     return str << "Conn(" << int(enval) << ")";
   }
   return str << val;
+}
+uint32_t
+OutputMapV2::map() const {
+     enum { Pulse_Offset=0, DBus_Offset=32, Prescaler_Offset=40 };    unsigned src_id = source_id();   switch(source()) {   case Pulse     : return src_id + Pulse_Offset;   case DBus      : return src_id + DBus_Offset;   case Prescaler : return src_id + Prescaler_Offset;   case Force_High: return 62;   case Force_Low : return 63;   }   return 0;
 }
 std::ostream& operator<<(std::ostream& str, EvrData::OutputMapV2::Source enval) {
   const char* val;
