@@ -1,0 +1,16 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <cstddef>
+#include "psddl_psana/l3t.ddl.h"
+#include <iostream>
+namespace Psana {
+namespace L3T {
+
+ConfigV1::~ConfigV1() {}
+
+
+DataV1::~DataV1() {}
+
+} // namespace L3T
+} // namespace Psana
