@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-05-02
+2013-09-24 Andy Salnikov
+- regenerate whole thing from psddldata V00-04-45 with psddl V00-08-18
+
 Tag: V00-05-01
 2013-09-24 Andy Salnikov
 - regenerate whole thing from psddldata V00-04-38 with psddl V00-08-16
